# multi-agent-crewai

./: README.md  pyproject.toml  report.md  requirements.txt
src/loan_processing/: crew.py  main.py
src/loan_processing/config/: agents.yaml  tasks.yaml
